# LuckySol

./: README.md
client/: eslint.config.mjs  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/admin/: page.tsx
client/src/app/buy-tickets/: page.tsx
client/src/app/create/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/lottery/[id]/: page.tsx
client/src/app/my-tickets/: page.tsx
client/src/app/results/: page.tsx
client/src/components/: BuyTicketModal.tsx  ConnectWallet.tsx  bgElements.tsx  confetti.tsx  footer.tsx  header.tsx
client/src/components/hero/: hero.tsx  lottery-model.tsx  snake-border.tsx  snake-canvas.tsx  swap-card.tsx
client/src/components/sections/: about.tsx  cta.tsx  faq.tsx  features.tsx  how-it-works.tsx  leaderboard.tsx  stats.tsx
client/src/idl/: lottery.json
client/src/lib/: generateLotteryId.tsx  transactions.ts  useProgram.ts
client/src/providers/: WalletContextProvider.tsx
program/: Anchor.toml
program/programs/program/: Cargo.toml  sample.rs
program/programs/program/src/: errors.rs  lib.rs
program/programs/program/src/contexts/: buy_ticket.rs  close_round.rs  fulfill_randomness.rs  initialize_lottery.rs  mod.rs  payout.rs  start_round.rs
program/programs/program/src/instructions/: buy_ticket.rs  close_round.rs  fulfill_randomness.rs  initialize_lottery.rs  mod.rs  payout.rs  start_round.rs
program/programs/program/src/state/: VaultAccount.rs  lottery.rs  mod.rs  round.rs  ticket.rs  ticket_book.rs  vault_account.rs
program/tests/: program.ts
(+1 files in other folders)
