[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[package.metadata.anchor]
program-id = "9hH3njmbadFWYXE5J9HB7ewvKBpqxYJd47BdecmQEGmt"
keypair = "../../target/deploy/program-keypair.json"