[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[package.metadata.anchor]
program-id = "8fvBHKNbzP1fhaxiEgjFp656FU2hEyhViauJcsLa6scG"
keypair = "target/deploy/program-keypair.json"