[package]
name = "lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[package.metadata.anchor]
program-id = "3vUR35rbkJ4Wp6fMags3Scy6MLkyGmH99JpJWFYbPowQ"
keypair = "target/deploy/my_program-keypair.json"
